iac/Kubernetes/mutating.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp2
  namespace: default
spec:
  selector:
    matchLabels:
      app: myapp2
  template:
    metadata:
      labels:
        app: myapp2
    spec:
      containers:
      - name: myapp2
        image: nginx:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
