iac/Kubernetes/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: validation
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: nginx:test
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
