iac/Kubernetes/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: validation
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validation-webhook
  namespace: validation
  labels:
    app: validate
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: validate
  template:
    metadata:
      labels:
        app: validate
    spec:
      containers:
        - name: webhook
          image: erdemstar/flask-admission-control:1.0.0
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 443
          volumeMounts:
            - name: certs-volume
              readOnly: true
              mountPath: "/etc/ssl/"
          imagePullPolicy: Always
      volumes:
        - name: certs-volume
          secret:
            secretName: admission-tls
---
apiVersion: v1
kind: Service
metadata:
  name: erdemstar
  namespace: validation
spec:
  selector:
    app: validate
  ports:
    - port: 443
