iac/Kubernetes/admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook
  namespace: validation
webhooks:
  - name: erdemstar.validation.svc
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups: ["apps", ""]
        resources:
          - "deployments"
        apiVersions:
          - "*"
        operations:
          - CREATE
    clientConfig:
      service:
        name: erdemstar
        namespace: validation
        path: /validate
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZ0akNDQTU2Z0F3SUJBZ0lVZitzS0JSazg4OXVlVnRZODdwVlVUWUNrVzh3d0RRWUpLb1pJaHZjTkFRRUwKQlFBd2NURUxNQWtHQTFVRUJoTUNWRkl4RVRBUEJnTlZCQWdNQ0VsemRHRnVZblZzTVJFd0R3WURWUVFIREFoSgpjM1JoYm1KMWJERVZNQk1HQTFVRUNnd01SWEprWlcxemRHRnlVMlZqTVNVd0l3WURWUVFEREJ4RmNtUmxiWE4wCllYSWdRMjl1ZEhKdmJHeGxjaUJYWldKb2IyOXJNQjRYRFRJeU1URXdPVEV3TkRrMU5Wb1hEVEl6TVRFd09URXcKTkRrMU5Wb3djVEVMTUFrR0ExVUVCaE1DVkZJeEVUQVBCZ05WQkFnTUNFbHpkR0Z1WW5Wc01SRXdEd1lEVlFRSApEQWhKYzNSaGJt [...]
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook
  namespace: validation
webhooks:
  - name: erdemstar.validation.svc
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups: ["apps", ""]
        resources:
          - "deployments"
        apiVersions:
          - "*"
        operations:
          - CREATE
    clientConfig:
      service:
        name: erdemstar
        namespace: validation
        path: /mutate
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZ0akNDQTU2Z0F3SUJBZ0lVZitzS0JSazg4OXVlVnRZODdwVlVUWUNrVzh3d0RRWUpLb1pJaHZjTkFRRUwKQlFBd2NURUxNQWtHQTFVRUJoTUNWRkl4RVRBUEJnTlZCQWdNQ0VsemRHRnVZblZzTVJFd0R3WURWUVFIREFoSgpjM1JoYm1KMWJERVZNQk1HQTFVRUNnd01SWEprWlcxemRHRnlVMlZqTVNVd0l3WURWUVFEREJ4RmNtUmxiWE4wCllYSWdRMjl1ZEhKdmJHeGxjaUJYWldKb2IyOXJNQjRYRFRJeU1URXdPVEV3TkRrMU5Wb1hEVEl6TVRFd09URXcKTkRrMU5Wb3djVEVMTUFrR0ExVUVCaE1DVkZJeEVUQVBCZ05WQkFnTUNFbHpkR0Z1WW5Wc01SRXdEd1lEVlFRSApEQWhKYzNSaGJt [...]
